[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Game BG.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/bender-bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/UiElements/CustomLineEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Menus/AccountManagement/Register.gd" type="Script" id=4]
[ext_resource path="res://scenes/UiElements/MenuBtn.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 600, 1042 )
margin_left = 45.4385
margin_right = 44.0361
margin_top = 44.5727
margin_bottom = 45.158

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 360.0 ]
}

[node name="BGLayer" type="CanvasLayer" parent="."]

[node name="BG" type="Panel" parent="BGLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Register Title" type="Label" parent="BGLayer"]
anchor_left = 0.501
anchor_top = 0.075
anchor_right = 0.501
anchor_bottom = 0.075
margin_left = -202.72
margin_right = 202.28
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Register Account"
align = 1

[node name="RegInputs" type="CanvasLayer" parent="."]

[node name="VBoxRegister" type="VBoxContainer" parent="RegInputs"]
anchor_left = 0.089
anchor_top = 0.162
anchor_right = 0.911
anchor_bottom = 0.587
margin_left = -0.0800018
margin_top = 0.639999
margin_right = 0.0799561
margin_bottom = 0.640015
custom_constants/separation = 68

[node name="EmailContainer" parent="RegInputs/VBoxRegister" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 592.0
margin_bottom = 136.0
size_flags_vertical = 3

[node name="PasswordContainer" parent="RegInputs/VBoxRegister" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 592.0
margin_bottom = 340.0
size_flags_vertical = 3

[node name="ConfPassContainer" parent="RegInputs/VBoxRegister" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 408.0
margin_right = 592.0
margin_bottom = 544.0
size_flags_vertical = 3

[node name="RegisterAcc" parent="RegInputs" instance=ExtResource( 5 )]
anchor_left = 0.265
anchor_top = 0.655
anchor_right = 0.732
anchor_bottom = 0.736
margin_left = 0.199982
margin_top = -0.400024
margin_right = -0.0400391
margin_bottom = -0.0800781
text = "Register"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="RegInputs/RegisterAcc" to="." method="_on_RegisterAcc_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
